--- a/src/TriviaGame/Application/Internal/PhpTpl/GenericDoc.phtml
+++ b/src/TriviaGame/Application/Internal/PhpTpl/GenericDoc.phtml
@@ -2,7 +2,7 @@
      https://github.com/SchrodtSven/TriviaGame
 -->
 <!doctype html>
-<html>
+<html lang="<?=$this->lang?>">
   <head>
     <meta charset="utf-8">
     <title><?= $this->title ?></title>
